// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`corpus: app-framework > soft metrics 1`] = `
{
  "bends": 25,
  "crossings": 15,
}
`;

exports[`corpus: assistant > soft metrics 1`] = `
{
  "bends": 21,
  "crossings": 18,
}
`;

exports[`corpus: compute > soft metrics 1`] = `
{
  "bends": 23,
  "crossings": 13,
}
`;

exports[`corpus: echo > soft metrics 1`] = `
{
  "bends": 25,
  "crossings": 6,
}
`;

exports[`corpus: edge > soft metrics 1`] = `
{
  "bends": 30,
  "crossings": 22,
}
`;

exports[`corpus: pipeline > soft metrics 1`] = `
{
  "bends": 9,
  "crossings": 2,
}
`;
